--- a/src/style1.css
+++ b/src/style1.css
@@ -52,6 +52,7 @@ dd {margin: 0 0 12px 0; display: flex;}
     order: 2; 
     padding-left: 10px;
     color: firebrick;
+    font-size: large;
 }
 
 /* Draw a 2px dashed rosybrown border around the address/footer */
