--- a/src/style2.css
+++ b/src/style2.css
@@ -37,7 +37,7 @@ dt {
 
 dd {display: inline; margin: 0;}
 dd::after {content: " "; display: block; clear: both; margin-bottom: 15px;}
-dd::before{content: ", "; font-weight: bold;}
+dt::after{content: ", "; font-weight: bold; margin-rigth: 1px;}
 
 .price {float: right; padding: 0 0 35px 20px;}
 
