--- a/src/style2.css
+++ b/src/style2.css
@@ -37,7 +37,7 @@ dt {
 
 dd {display: inline; margin: 0;}
 dd::after {content: " "; display: block; clear: both; margin-bottom: 15px;}
-dt::after{content: ","; font-weight: bold; margin-rigth: 3px;}
+dt::after{content: ", ㅤㅤ"; font-weight: bold; margin-rigth: 3px;}
 dd:before{content: "ㅤ"}
 .price {float: right; padding: 0 0 35px 20px;}
 
